# browser-use-mcp

./: README.md  example.py  pyproject.toml  run.py
browser_use_mcp/: __init__.py  __main__.py  main.py  models.py
